changed api to be more clean
